Filter unrelated Jobs events before payment audit